# jfyi-just-for-your-information

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT_LENGTH_OPTIMIZATION.md  Dockerfile  GEMINI.md  README.md  ROADMAP.md  TODO_ITR.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  ghcr-housekeeping.yml  helm-package.yml  pages.yml  release.yml
app/src/main/java/net/hlan/sushi/: ConversationManager.kt  MainActivity.kt  PlayRunner.kt  SshClient.kt  TerminalActivity.kt  TerminalBackend.kt  TerminalSessionHolder.kt
data/: jfyi.db
docs/: a2a.md  acp.md  agent-warming.md  architecture.md  background-summarization.md  chromadb-extraction.md  compiled-view-memory.md  context-compaction.md  developer-analytics.md  dlp-redaction.md  friction-clustering.md  identity-providers.md  image-optimization.md  itr.md  notebooklm-report.md  notes-vs-rules.md  oauth-rbac.md  payload-minification.md  positive-reinforcement.md  progressive-disclosure.md  read-only-injection.md  rule-synthesis.md  sandboxed-execution.md  semantic-rule-inference.md  three-tiered-memory.md  tiered-profiling.md  vector-embeddings.md  vibe-telemetry.md
helm/jfyi-mcp-server/: Chart.yaml  README.md  values.yaml
helm/jfyi-mcp-server/templates/: NOTES.txt  _helpers.tpl  chromadb-deployment.yaml  chromadb-pvc.yaml  chromadb-service.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/jfyi-mcp-server/templates/tests/: test-connection.yaml
pages/: CNAME  index.html
scripts/: rotate-jwt.sh
src/jfyi/: __init__.py  analytics.py  auth.py  cli.py  config.py  database.py  dlp.py  memory.py  prompt.py  retrieval.py  serializer.py  server.py  summarizer.py  synthesizer.py  vector.py
src/jfyi/web/: __init__.py  app.py
src/jfyi/web/static/: index.html
src/jfyi/web/ui/: index.html  package.json  vite.config.js
src/jfyi/web/ui/src/: App.vue  main.js
src/jfyi/web/ui/src/views/: Dashboard.vue  Login.vue
tests/: test_analytics.py  test_api.py  test_artifacts.py  test_database.py  test_developer_analytics.py  test_dlp.py  test_memory.py  test_retrieval.py  test_server.py  test_summarizer.py  test_synthesizer.py  test_vector.py
