[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jfyi-mcp-server"
version = "2.1.0"
description = "JFYI - Just For Your Information: A passive MCP server and analytics hub with Profile-Guided Optimization"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.1",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.1",
    "pydantic-settings>=2.0.1",
    "typer>=0.12.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.1.0",
    "pyjwt>=2.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
vector = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[project.scripts]
jfyi = "jfyi.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.setuptools.package-data]
"jfyi.web" = ["*.html", "*.css", "*.js", "*.png", "*.ico", "static/*"]
